[package]
name = "rust_regression"
version = "0.1.0"
edition = "2024"

[dependencies]
faer = "0.22"
faer-traits = "0.22"
num = "0.4.1"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }


[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"
clippy = { package = "clippy", version = "*" }